FIX 118417 vertical-align: middle to avoid a bug with Filezilla when vertical-align: baseline and empty cells

--- a/tickleman/zombiciderocks/skins/zombicide/mission-tile-widget.scss
+++ b/tickleman/zombiciderocks/skins/zombicide/mission-tile-widget.scss
@@ -20,6 +20,7 @@
 				color: transparent;
 				font-size: 1px;
 				padding: 0;
+				vertical-align: middle;
 
 				&.ui-droppable-hover {
 					filter: brightness(110%);
